# task-manager

./: .dockerignore  .env.tpl  .envblah  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml
backend/: .env.tpl  Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  setup.py  test.db
backend/api/: database.py  dependencies.py  main.py  models.py
backend/api/routers/: auth.py  tasks.py
backend/tests/: conftest.py  test_tasks.py
frontend/: .env.tpl  .eslintrc.json  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: EditableDate.tsx  EditableField.tsx  LoadingSpinner.tsx  ProtectedRoute.ts  ProtectedRoute.tsx  TaskBoard.tsx  TaskCard.tsx  TaskCardMenu.tsx  TaskColumn.tsx  TaskForm.tsx  TaskList.tsx
frontend/app/components/features/tasks/: EditableDate.tsx  EditableField.tsx  TaskBoard.tsx  TaskCard.tsx  TaskCardMenu.tsx  TaskColumn.tsx  TaskForm.tsx  TaskHeaderActions.tsx  TaskList.tsx
frontend/app/components/layout/: ProtectedRoute.tsx
frontend/app/context/: AuthContext.tsx
frontend/app/login/: page.tsx
frontend/app/types/: task.ts
frontend/components/ui/: dropdown-menu.tsx
frontend/frontend/: package-lock.json
frontend/lib/: api-client.ts  axios.ts
frontend/lib/api/: client.ts  tasks.ts
frontend/lib/services/: auth.ts  tasks.ts
